# csvglow

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  SKILL.md  glama.json  pyproject.toml  smithery.yaml
examples/: sales.csv
npm/: package.json
src/csvglow/: __init__.py  __main__.py  analyzer.py  browser.py  chart_config.py  cli.py  core.py  mcp_server.py  reader.py  renderer.py  sampler.py
src/csvglow/templates/: dashboard.html.j2
src/csvglow/templates/macros/: styles.j2
tests/fixtures/: simple.csv
