[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csvglow"
version = "0.1.0"
description = "Generate beautiful HTML dashboards from CSV/Excel files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5.0",
    "jinja2>=3.1.0",
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff"]

[project.scripts]
csvglow = "csvglow.cli:main"
csvglow-mcp = "csvglow.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
csvglow = [
    "assets/*.js",
    "templates/*.j2",
    "templates/macros/*.j2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
